deps/FNA/lib/MojoShader/csharp/MojoShader.cs


	/* data refers to a float* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glGetVertexShaderUniformF(
		uint idx,
		IntPtr data,
		uint vec4count
	);

	/* data refers to a const int* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glSetVertexShaderUniformI(
		uint idx,
		IntPtr data,
		uint ivec4count
	);

	/* data refers to an int* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glGetVertexShaderUniformI(
		uint idx,
		IntPtr data,
		uint ivec4count
	);

	/* data refers to a const int* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glSetVertexShaderUniformB(
		uint idx,
		IntPtr data,
		uint bcount
	);

	/* data refers to an int* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glGetVertexShaderUniformB(
		uint idx,
		IntPtr data,
		uint bcount
	);

	/* data refers to a const float* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glSetPixelShaderUniformF(
		uint idx,
		IntPtr data,
		uint vec4count
	);

	/* data refers to a float* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glGetPixelShaderUniformF(
		uint idx,
		IntPtr data,
		uint vec4count
	);

	/* data refers to a const int* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glSetPixelShaderUniformI(
		uint idx,
		IntPtr data,
		uint ivec4count
	);

	/* data refers to an int* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glGetPixelShaderUniformI(
		uint idx,
		IntPtr data,
		uint ivec4count
	);

	/* data refers to a const int* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glSetPixelShaderUniformB(
		uint idx,
		IntPtr data,
		uint bcount
	);

	/* data refers to an int* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glGetPixelShaderUniformB(
		uint idx,
		IntPtr data,
		uint bcount
	);

	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glSetLegacyBumpMapEnv(
		uint sampler,
		float mat00,
		float mat01,
		float mat10,
		float mat11,
		float lscale,
		float loffset
	);

	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern int MOJOSHADER_glGetVertexAttribLocation(
		MOJOSHADER_usage usage,
		int index
	);

	/* ptr refers to a const void* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glSetVertexAttribute(
		MOJOSHADER_usage usage,
		int index,
		uint size,
		MOJOSHADER_attributeType type,
		int normalized,
		uint stride,
		IntPtr ptr
	);

	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glSetVertexAttribDivisor(
		MOJOSHADER_usage usage,
		int index,
		uint divisor
	);

	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glProgramReady();

	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glProgramViewportFlip(int flip);

	/* program refers to a MOJOSHADER_glProgram* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glDeleteProgram(IntPtr program);

	/* shader refers to a MOJOSHADER_glShader* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glDeleteShader(IntPtr shader);

	/* ctx refers to a MOJOSHADER_glContext* */
	[DllImport(nativeLibName, CallingConvention = CallingConvention.Cdecl)]
	public static extern void MOJOSHADER_glDestroyContext(IntPtr ctx);

	#endregion
}
